# wasm-game-of-life

./: .gitignore  Cargo.toml  LICENSE_MIT
pkg/: package.json  wasm_game_of_life.d.ts  wasm_game_of_life_bg.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
src/: lib.rs
www/: index.html  index.js
