[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["djakish <69299717+djakish@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]


[dependencies]
wasm-bindgen = "0.2.63"
fixedbitset = "0.4.1"
js-sys = "^0"


console_error_panic_hook = { version = "0.1.6", optional = true }


wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "z"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]